--- a/pkg/view/base/index.templ
+++ b/pkg/view/base/index.templ
@@ -43,7 +43,7 @@ templ Layout(title string) {
 			@component.Title(title)
 			@component.Styles() {
 				@component.LinkStyle("/static/css/pico.min.css", templ.Attributes{})
-				@component.LinkStyle("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css", templ.Attributes{})
+				@component.LinkStyle("https://site-assets.fontawesome.com/releases/v6.6.0/css/all.css", templ.Attributes{})
 				@component.LinkStyle("/static/css/style.css", templ.Attributes{"type": "text/css", "media": "screen", "charset": "utf-8"})
 			}
 		}
